# rover_nebulizador

nebulizador_description/: CMakeLists.txt  package.xml
nebulizador_description/launch/: 2wd_urdf.launch  arm.launch  urdf.launch
nebulizador_description/meshes/arm/: link_2.stl
nebulizador_description/meshes/arm/visual/: beam_support.stl  box_nebulizador_base.stl  link_1.stl  link_2.stl
nebulizador_description/robot/urdf/: arm.urdf.xacro  urdf.urdf
nebulizador_description/rviz/: 2WD_rover.urdf.rviz  4WD_rover.urdf.rviz  arm.urdf.rviz
nebulizador_description/urdf/: 2WD_rover.urdf.xacro  4WD_rover.gazebo.xacro  4WD_rover.urdf.xacro
nebulizador_description/urdf/accessories/: box.urdf.xacro  value_pi.xacro
nebulizador_description/urdf/accessories/arm/: body.gazebo.xacro  body.transmission.xacro  body.urdf.xacro
nebulizador_gazebo/: CMakeLists.txt  package.xml
nebulizador_gazebo/launch/: 2wd_nebulizador_gazebo.launch  2wd_nebulizador_gazebo_teleop.launch  4wd_nebulizador_gazebo.launch  4wd_nebulizador_gazebo_teleop.launch
nebulizador_navigation/: CMakeLists.txt  package.xml
rover_nebulizador/: CMakeLists.txt  package.xml
