<?xml version="1.0"?>
<package format="2">
  <name>rover_nebulizador</name>
  <version>0.0.0</version>
  <description>The rover_nebulizador package</description>

  <maintainer email="victor.aperezt@gmail.com">Victor Perez</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>nebulizador_description</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage/>
  </export>
</package>
